--- a/docassemble/LLAW33012020S1P18/data/questions/ASA_prototype1.yml
+++ b/docassemble/LLAW33012020S1P18/data/questions/ASA_prototype1.yml
@@ -14,18 +14,18 @@ question: |
   </span>
   
 subquestion: |
-  This program can help you get ready for your NDIS planning meeting. 
+  This program can help you get ready for your NDIS planning meeting. An important part of the planning meeting is having your Booklet 2 filled out. This program can help you answer the questions to create that Booklet for your planning meeting. 
 
   *This application is only for use by people with intellectual disabilities.* 
   
-  **You should have a support worker with you while using this program. If you are under 18 you must have a support worker or family member with you.**
+  **You should have a support worker with you while using this program.** ***If you are under 18 you must have a support worker or family member with you.***
   
   <span class="ASAdisclaimerheading">
   ***Disclaimer***
   </span>
   
   <span class="ASAdisclaimer">
-  This program does **not** give legal advice. The information in the booklet is not intended to be a subsitute for legal advice and should not be relied upon as legal advice. Appropriate legal advice should be sought in relation to any matters you may have. 
+  This program does **not** give legal advice. Any information in this applicaiton or the booklet it produces is not intended to be a subsitute for legal advice and should not be relied upon as legal advice. Appropriate legal advice should be sought in relation to any matters you may have. 
   </span>
   
   Answer all questions honestly. This is important. 
