--- a/docassemble/LLAW33012020S1P18/data/questions/ASA_prototype1.yml
+++ b/docassemble/LLAW33012020S1P18/data/questions/ASA_prototype1.yml
@@ -176,44 +176,44 @@ subquestion: |
   
   **Question** | **Your Answer**
   -------------|----------------
-  Granted Access     | ${ ASAaccess } 
-  Name               | ${ ASAfirstname } ${ ASAlastname }     
-  NDIS number        | ${ ASAndisnumber } 
-  Age                | ${ ASAage } 
-  Disability Impact  | ${ ASAdisability }  
-  About You          | ${ ASAimportant }
-  %for impt_person in important_people:
-  ${impt_person.name}|${impt_person.info}
-  %endfor
-  Your Home          | ${ ASAhome } 
-  Daily Tasks        | ${ ASAdaily } 
-  Likes              | ${ ASAlikes } 
-  Job                | ${ ASAjob } 
+  Access Granted?         | ${ ASAaccess } 
+  Name                    | ${ ASAfirstname } ${ ASAlastname }     
+  Age                     | ${ ASAage } 
+  NDIS Number             | ${ ASAndisnumber } 
+  About You               | ${ ASAimportant } 
+  Disability Impact       | ${ ASAdisability }  
+  Your Home               | ${ ASAhome } 
+  Daily Tasks             | ${ ASAdaily } 
+  Job                     | ${ ASAjob } 
+  Things you do Sometimes | ${ ASAsometimes } 
+  Likes                   | ${ ASAlikes } 
+  Activities              | ${ favourite_activity } 
+  Enjoyable Tasks         | ${ individual_activity } 
   %for item in community_involvement:
-  ${item.name}       | ${item.info}
+  ${item.name}            | ${item.info}
   %endfor
+  Group Membership        | ${ group_member }
+  Short Term Goals        | ${ shortterm_goals } 
+  Long Term Goals         | ${ longterm_goals }
+  %for impt_person in important_people:
+  ${impt_person.name}     |${impt_person.info}
+  %endfor 
+  Monday Tasks            | ${ ASAMonday }, ${ ASAMondaysup }
+  Tuesday Tasks           | ${ ASATuesday }, ${ ASATuesdaysup} 
+  Wednesday Tasks         | ${ ASAWednesday }, ${ ASAWednesdaysup }
+  Thursday Tasks          | ${ ASAThursday }, ${ ASAThursdaysup } 
+  Friday Tasks            | ${ ASAFriday }, ${ ASAFridaysup } 
+  Saturday Tasks          | ${ ASASaturday }, ${ ASASaturdaysup } 
+  Sunday Tasks            | ${ ASASunday }, ${ ASASundaysup }
+  Current Help            | ${ STcurrenthelp }
   %for item in government_support:
-  ${item.name}       | ${item.info}
+  ${item.name}            | ${item.info}
   %endfor
-  Monday Tasks        | ${ ASAMonday }, ${ ASAMondaysup }
-  Tuesday Tasks       | ${ ASATuesday }, ${ ASATuesdaysup} 
-  Wednesday Tasks     | ${ ASAWednesday }, ${ ASAWednesdaysup }
-  Thursday Tasks      | ${ ASAThursday }, ${ ASAThursdaysup } 
-  Friday Tasks        | ${ ASAFriday }, ${ ASAFridaysup } 
-  Saturday Tasks      | ${ ASASaturday }, ${ ASASaturdaysup } 
-  Sunday Tasks        | ${ ASASunday }, ${ ASASundaysup } 
-  Sometimes          | ${ ASAsometimes } 
-  Activities         | ${ favourite_activity } 
-  Group Membership   | ${ group_member } 
-  Enjoyable Tasks    | ${ individual_activity } 
-  New Tasks          | ${ learn_activity } 
-  Short Term Goals   | ${ shortterm_goals } 
-  Long Term Goals    | ${ longterm_goals } 
-  Current Help       | ${ STcurrenthelp } 
-  Further Help       | ${ STmorehelp }
-  Other Information  | ${ STotherpersoninfo } 
-  Plan Supervisor    | ${ STplan }
-  Meeting Companion  | ${ STbring } 
+  New Tasks               | ${ learn_activity } 
+  Further Help            | ${ STmorehelp }
+  Other Information       | ${ STotherpersoninfo } 
+  Plan Supervisor         | ${ STplan }
+  Meeting Companion       | ${ STbring } 
   
   
   
@@ -244,7 +244,6 @@ fields:
   - no label: ASAage
     datatype: integer
 ---
-decoration: numbergraphic.png
 question: Write your NDIS number. 
 fields: 
   - no label: ASAndisnumber
@@ -252,7 +251,7 @@ fields:
 under: |
   You can find your NDIS number on myplace through myGov. It will be 9 numbers and look something like this: 123 456 789. This picture shows you were to find it on myplace. 
   
-                  [FILE numbergraphic.png] 
+  [FILE numbergraphic.png] 
 ---
 question: Write about yourself. 
 subquestion: | 
